# simple_wfc

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md
examples/: helpers.rs  line_grid.rs  procedural_texture.rs  simple.rs
src/: benches.rs  collapse.rs  collapse_rule.rs  extract.rs  grid_2d.rs  grid_3d.rs  lib.rs  overlapping.rs  rules.rs  set_rule.rs  space.rs  square_grid.rs  state.rs  state_set.rs
tests/: basic.rs  simple.rs
